# TOOLS-33

./: .gitignore  AGENTS.md  FIRMAR-MANUAL.md  README.md  UPDATER_SETUP.md  index.html  latest.json  package-lock.json  package.json  pnpm-lock.yaml  prepare-release.ps1  sign-files.bat
.github/workflows/: release.yml
scripts/: .gitkeep  generate-update-json.ps1  install-ghostscript.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  generate-keys.ps1  installer.nsh  private.pem.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cad_parser.rs  cad_scanner.rs  lib.rs  pdf_compress_pure.rs  pdf_compression.rs
src/components/: index.ts
src/components/cad-scanner/: AutoPreviewGrid.tsx  CadCanvas.tsx  ExportButton.tsx  FileImporter.tsx  LoadingOverlay.tsx  ManualControls.tsx  ModeSelector.tsx  PaperSizeSelector.tsx  ScaleInput.tsx  index.ts  types.ts
src/components/icons/: CpuIcon.tsx  index.ts
src/components/layout/: CenteredLayout.tsx
src/components/magazine/: AlertModal.tsx  BackCoverToggle.tsx  DistributionInfo.tsx  EmptyState.tsx  GeneratePdfButton.tsx  (+10 more)
src/hooks/: index.ts  useAnimationFrame.ts  useImageWorker.ts  useLazyImage.ts  useProgress.ts  useSystemInfo.ts
src/screens/: CadScannerScreen.tsx  HomeScreen.tsx  ImageScalerScreen.tsx  LoadingScreen.tsx  MagazineScreen.tsx  ParticlesScreen.tsx  PdfCompressScreen.tsx  PdfMergeScreen.tsx  TextureGeneratorScreen.tsx  index.ts
src/utils/: index.ts  particles.ts  pdfCompression.ts  tauriCompression.ts  updater.ts
src/workers/: imageWorker.ts
(+38 files in other folders)
