[package]
name = "tools-33"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tools_33_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
anyhow = "1"
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.7.0"
lopdf = { version = "0.35", features = ["embed_image", "nom_parser"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
deflate = "1"
flate2 = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
sysinfo = "0.30"

